--- a/prop_for_3d/templates/prop_for_3d/index.html
+++ b/prop_for_3d/templates/prop_for_3d/index.html
@@ -1,52 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
-
-<!-- index.html content starts here -->
-<div class="container-fluid">
-    <div class="row">
-
-        <!-- Blog Entries Column -->
-        <div class="col-12 mt-3 left">
-            <div class="row">
-                {% for post in post_list %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <div class="card-body">
-                            <div class="image-container">
-                                <div class="image-flash">
-                                    <p class="author">Author: {{ post.author }}</p>
-                                </div>
-                            </div>
-                            <a href="#" class="post-link">
-                                <h2 class="card-title">{{ post.title }}</h2>
-                            </a>
-
-                            <hr />
-                            <p class="card-text text-muted h6">{{ post.created_on}}
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                {% if forloop.counter|divisibleby:3 %}
-            </div>
-            <div class="row">
-                {% endif %}
-                {% endfor %}
-
-            </div>
-        </div>
+<section class="section-bg">
+    <div class="row no-gutters front-text-format">
+        <p> Metal 3D printing is a growing alternative method to manufacture complex parts and for most applications is
+            a well-established process. The method is based on selective laser or electron-beam melting of layers of
+            metal powder.</p>
+        <br>
+        <br>
+        <p>Using additive manufacturing approach, we aim to create metal micro-sized surfaces/coatings having intricate
+            structures directly on selected solid metal substrates.</p>
+        <br>
+        <br>
+        <p>This is a novel approach of using this technique to create functional surfaces directly on substrates aiming
+            to reduce manufacturing and post processing cost, CO2 emission, product longevity, and especially the
+            possibility to develop the manufacturing upscaling.</p>
     </div>
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
-</div>
+</section>
 
-<!-- index.html content ends here -->
 {% endblock %}
