Add logo and team member images

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
                                     home</span>Home</a>                                
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item menuitem" title="OUR TEAM">
-                                <a href="#"><span class="material-symbols-outlined">
+                                <a href="{% static 'templates/team.html' %}"><span class="material-symbols-outlined">
                                     group
                                     </span>Team</a>
                             </li>
