--- a/staticfiles/css/style.css
+++ b/staticfiles/css/style.css
@@ -21,7 +21,7 @@ body {
 /*----------images----------*/
 
 .logo {
-    background: url(../images/logo.jpg);
+    background: url(/static/images/logo.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size:cover;
