--- a/prop_for_3d/templates/prop_for_3d/facility.html
+++ b/prop_for_3d/templates/prop_for_3d/facility.html
@@ -2,31 +2,41 @@
 
 {% block content %}
 
+{% load static %}
+
 <section class="section-bg">
     <div class="row no-gutters">
         <div class="col-md-2">
-            <img src="../images/jurgita.jpg" title="Dr Jurgita Zekonyte" alt="Dr Jurgita Zekonyte">
+            <img src="{% static 'images/meltio-m450.jpg' %}" title="MELTIO M450" alt="MELTIO M450">
         </div>
-        <div class="col-md-10 bio">Jurgita Zekonyte is a lead of the project and expert in advanced surfaces and
-            interfaces science, surface modification and characterisation from nano to micro scale.</div>
+        <div class="col-md-10 bio">Featuring groundbreaking laser direct energy deposition (DED) technology, the <strong>Meltio M450</strong> can process both wire and powder and allows for quick changeover of materials, enabling the development of parts printed with 2 or more materials.  It will enable innovative remanufacture and repair processes, in a variety of materials, for a range of industries. The compact and portable Meltio is ideal for small to medium size part fabrication and multi-metal 3D printing research.  It will revolutionise the rapid replacement of spare parts and in-situ repairs.</div>
     </div>
 
     <div class="row no-gutters">
         <div class="col-md-2">
-            <img src="../images/mariana.jpg" title="Dr Mariana Dotcheva" alt="Dr Mariana Dotcheva">
+            <img src="{% static 'images/nanoindenter.jpg' %}" title="Bruker Hysintron nanoindenter" alt="Bruker Hysintron nanoindenter">
         </div>
-        <div class="col-md-10 bio">Dr Mariana Dotcheva is specialising in Additive Manufacturing (AM). She is actively
-            working on several projects around metal AM.</div>
+        <div class="col-md-10 bio">Analysis of the measured force vs. displacement curve (particularly the unloading segment) provides the user with quantitative information regarding the mechanical properties of the sample. Values typically obtained from quasi-static nanoindentation testing are Reduced Modulus and Hardness. However other information such as fracture toughness, stiffness, delamination force, and film thickness can also be obtained. All <strong>Hysitron</strong> standalone nanoindentation systems are capable of in-situ SPM imaging. Using the same probe to scan a sample surface immediately before and/or after a test allows for precise placement of the test as well as observation of deformation events or sample recovery after the test.</div>
     </div>
 
     <div class="row no-gutters">
         <div class="col-md-2">
-            <img src="../images/krasimir.png" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
+            <img src="{% static 'images/prox-dmp-300.jpg' %}" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
         </div>
         <div class="col-md-10 bio">Dr Krasimir Dotchev is specialising in advance CAD modelling and has wealth of
             experience in AM (stereolithography, SLS, FDM and metal AM) through his work on research and commercial
             projects.</div>
     </div>
+
+    <div class="row no-gutters">
+        <div class="col-md-2">
+            <img src="{% static 'images/sodick-alc600g.jpg' %}" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
+        </div>
+        <div class="col-md-10 bio">Dr Krasimir Dotchev is specialising in advance CAD modelling and has wealth of
+            experience in AM (stereolithography, SLS, FDM and metal AM) through his work on research and commercial
+            projects.</div>
+    </div>
+
 </section>
 
 {% endblock %}
