Updated Facility page by adding instruments

--- a/prop_for_3d/templates/prop_for_3d/facility.html
+++ b/prop_for_3d/templates/prop_for_3d/facility.html
@@ -16,25 +16,21 @@
         <div class="col-md-2">
             <img src="{% static 'images/nanoindenter.jpg' %}" title="Bruker Hysintron nanoindenter" alt="Bruker Hysintron nanoindenter">
         </div>
-        <div class="col-md-10 bio">Analysis of the measured force vs. displacement curve (particularly the unloading segment) provides the user with quantitative information regarding the mechanical properties of the sample. Values typically obtained from quasi-static nanoindentation testing are Reduced Modulus and Hardness. However other information such as fracture toughness, stiffness, delamination force, and film thickness can also be obtained. All <strong>Hysitron</strong> standalone nanoindentation systems are capable of in-situ SPM imaging. Using the same probe to scan a sample surface immediately before and/or after a test allows for precise placement of the test as well as observation of deformation events or sample recovery after the test.</div>
+        <div class="col-md-10 bio">Analysis of the measured force vs. displacement curve (particularly the unloading segment) provides the user with quantitative information regarding the mechanical properties of the sample. Values typically obtained from quasi-static nanoindentation testing are Reduced Modulus and Hardness. However other information such as fracture toughness, stiffness, delamination force, and film thickness can also be obtained. All <strong>Hysitron</strong> standalone nanoindentation systems from Bruker are capable of in-situ SPM imaging.</div>
     </div>
 
     <div class="row no-gutters">
         <div class="col-md-2">
-            <img src="{% static 'images/prox-dmp-300.jpg' %}" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
+            <img src="{% static 'images/prox-dmp-300.jpg' %}" title="ProX DMP 300" alt="ProX DMP 300">
         </div>
-        <div class="col-md-10 bio">Dr Krasimir Dotchev is specialising in advance CAD modelling and has wealth of
-            experience in AM (stereolithography, SLS, FDM and metal AM) through his work on research and commercial
-            projects.</div>
+        <div class="col-md-10 bio">The <strong>ProX DMP 300</strong> is a high-performance, high-quality laser metal 3D printed part manufacturing system, offering reduced waste, greater speeds for production, short set up times, very dense metal parts, and the ability to produce very complex assemblies as a single part. With a build volume of 250 x 250 x 330 mm (9.84 x 9.84 x 12.99 in) it features an automated material loading and recycling system.</div>
     </div>
 
     <div class="row no-gutters">
         <div class="col-md-2">
-            <img src="{% static 'images/sodick-alc600g.jpg' %}" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
+            <img src="{% static 'images/sodick-alc600g.jpg' %}" title="Sodick ALC600G" alt="Sodick ALC600G">
         </div>
-        <div class="col-md-10 bio">Dr Krasimir Dotchev is specialising in advance CAD modelling and has wealth of
-            experience in AM (stereolithography, SLS, FDM and metal AM) through his work on research and commercial
-            projects.</div>
+        <div class="col-md-10 bio">The <strong>ALC600G</strong>, Rigid Linear Motor Driven CE Certified Wire EDM (Electrical Discharge Machinning) Machine, is one of the newest additions to the Sodick product line-up. This new machine includes some exciting new features, such as a full security enclosure, next-generation SPW control with Smart Pulse Generator, and other performance boosting technologies. The ALC series wire EDM offers the most advanced safety features on the market, in full compliance with international CE specifications.</div>
     </div>
 
 </section>
