Add layout to overview multiple proposals, updated the proposal model by adding fields 'keywords' and 'email'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -154,6 +154,13 @@ a {
     margin: 0;
 }
 
+/*----------Proposals-Overview----------*/
+
+.prop-overview {
+    font-family: "Roboto", sans-serif;
+}
+
+
 /*----------Effects----------*/
 
 .menuitem:hover {
