--- a/prop_for_3d/templates/prop_for_3d/proposal.html
+++ b/prop_for_3d/templates/prop_for_3d/proposal.html
@@ -4,39 +4,16 @@
 
 {% load static%} 
 
+<!--Below is the overwiew of the most recently submitted students ideas-->
+<br>
+<h3 class="prop-overview" >Recent ideas<span class="material-symbols-outlined">lightbulb</span></h3>
 
-<!-- index.html content starts here -->
-<div class="container-fluid">
-    <div class="row">
-        <div>
-            <div>
-                <p>Author: {{ prop.student }}</p>
-            </div>
-        </div>
-        <a href="#" class="post-link">
-            <!--Play here with arguments-->
-            <h2>{{ prop.title }}</h2>
-            <!--<p>{{ post.excerpt }}</p>-->
-        </a>
-        <hr />
-        <p>{{ prop.created_on}}
-        </p>
-    </div>
-
-    <!--
-    {% if is_paginated %}
-    <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-            <li><a href="?page={{ page_obj.previous_page_number }}" class="page-link">&laquo; PREV </a></li>
-            {% endif %}
-            {% if page_obj.has_next %}
-            <li><a href="?page={{ page_obj.next_page_number }}" class="page-link"> NEXT &raquo;</a></li>
-            {% endif %}
-        </ul>
-    </nav>
-    {% endif %}
+<div class="row no-gutters">
+    <br>
+    <div class="col-12 col-md-4 prop-overview">Topic/Subject</div>
+    <div class="col-12 col-md-4 prop-overview">Student</div>
+    <div class="col-12 col-md-4 prop-overview">Keywords</div>
 </div>
--->
-<!-- index.html content ends here -->
+<hr>
+
 {% endblock %}
