--- a/prop_for_3d/templates/prop_for_3d/team.html
+++ b/prop_for_3d/templates/prop_for_3d/team.html
@@ -9,21 +9,21 @@
             <div class="col-md-2">
                 <img src="{% static 'images/jurgita.jpg' %}" title="Dr Jurgita Zekonyte" alt="Dr Jurgita Zekonyte">
             </div>
-            <div class="col-md-10 bio">Jurgita Zekonyte is a lead of the project and expert in advanced surfaces and interfaces science, surface modification and characterisation from nano to micro scale.</div>
+            <div class="col-md-10 bio">Dr Jurgita Zekonyte is a lead of the project and expert in advanced surfaces and interfaces science, modification and characterisation from nano to micro scale. Jurgita is a Senior Lecturer in the School of Engineering. She obtained her PhD in Materials Science and Engineering at Christian-Albrechts University of Kiel, Germany, in 2005. As a postdoctoral researcher/fellow, she worked in various UK universities until she joined the University of Portsmouth in 2014. During her studies and subsequent post-doctoral experience, she became proficient in areas relating to materials and surface science and interfaces, tribology, nanotechnology and nanocomposites, physical, mechanical and chemical analysis and characterization of materials in engineering and life science sectors.</div>
         </div>
 
         <div class="row no-gutters">
             <div class="col-md-2">
                 <img src="{% static 'images/mariana.jpg' %}" title="Dr Mariana Dotcheva" alt="Dr Mariana Dotcheva">
             </div>
-            <div class="col-md-10 bio">Dr Mariana Dotcheva is specialising in Additive Manufacturing (AM). She is actively working on several projects around metal AM.</div>
+            <div class="col-md-10 bio">Dr Mariana Dotcheva - specialist in Additive Manufacturing (AM). Mariana is a Senior Lecturer in the School of Engineering. She obtained her PhD from the University of Wales in 2006. Her research and interest involve development of novel CAD/CAM strategies for high-efficiency machining, process modelling, design freedom, direct manufacturing, design and rapid manufacturing of functional metal parts with value-adding material structures and surfaces, designed and optimised for purpose. As well as Computer Numerical Control (CNC) machining, cutting process modelling and optimisation, FEA analysis, Selective Laser Melting (SLM) for Rapid Manufacturing.</div>
         </div>
 
         <div class="row no-gutters">
             <div class="col-md-2">
                 <img src="{% static 'images/krasimir.png' %}" title="Dr Krasimir Dotchev" alt="Dr Krasimir Dotchev">
             </div>
-            <div class="col-md-10 bio">Dr Krasimir Dotchev is specialising in advance CAD modelling and has wealth of experience in AM (stereolithography, SLS, FDM and metal AM) through his work on research and commercial projects.</div>
+            <div class="col-md-10 bio">Dr Krassimir Dotchev - specialist in advanced CAD modelling and has a wealth of experience in AM. Krassimir is a Senior Lecturer in Mechanical Engineering Design and CAD/CAM/CAE in the School of Engineering. Through his work on research and commercial projects he gained a vast expertise in CAD/CAM systems, computer aided engineering, and advanced modelling including topology and surface optimization, selective laser sintering, stereolithography, CAD/STL data manipulation, CAD/STL data manipulation, rapid product development, design for manufacture using various manufacturing approaches. He is also an expert in Automotive Engineering Design and Analysis</div>
         </div>
     </section>
     
