--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
                             <li class="col-6 col-sm-3 list-inline-item menuitem" title="SUBMIT PROPOSAL">
                                 <a href="{% url 'proposal' %}" target="_blank"><span class="material-symbols-outlined">
                                     note_stack
-                                    </span>Proposal</a>
+                                    </span>For students</a>
                             </li>
                         </ul>
                     </div>
@@ -67,7 +67,7 @@
             <div class="col-sm-4 footer-item-marg">
                 <h5 class="uppercase general-sub">About the team</h5>
                 <p class="inline-block">
-                    <em> battery specialist. 15-year research experience in electrochemistry and materials for energy generation/storage systems within commercial and academic product development projects.</em>
+                    The group aims to design, optimise and manufacture 3D functional structures and thin coatings using metals additive manufacturing techniques with minimised post processing manufacturing steps. We seek to establish academic and commercial collaborations on surface engineering and additive manufacturing in aerospace, automotive, marine and medical sectors.
                 </p>
             </div>
             <div class="col-sm-4 footer-item-marg">
