--- a/static/css/style.css
+++ b/static/css/style.css
@@ -18,6 +18,10 @@ body {
     background-color: rgb(240, 240, 240);
 }
 
+.entry-background {
+    background-color:#b6dcde;
+}
+
 /*----------images----------*/
 
 .logo {
@@ -154,10 +158,18 @@ a {
     margin: 0;
 }
 
+#ideas-header {
+    font-family: "Roboto", sans-serif;
+    padding-left: 30px;
+    color: rgb(20, 75, 45);
+    font-size: x-large;
+}
+
 /*----------Proposals-Overview----------*/
 
 .prop-overview {
     font-family: "Roboto", sans-serif;
+    padding-left: 20px;
 }
 
 
@@ -175,6 +187,11 @@ a {
 .bio:hover {
     color: black;
     font-weight: 500;
+}
+
+.prop-overview:hover {
+    font-weight: 500;
+    background-color: rgb(213, 226, 232);
 }
 
 
