--- a/prop_for_3d/templates/prop_for_3d/prop_single.html
+++ b/prop_for_3d/templates/prop_for_3d/prop_single.html
@@ -21,3 +21,38 @@
 </section>
 
 {% endblock %}
+
+
+{% extends 'base.html' %} {% block content %}
+{% load static %}
+
+<div>
+    <div>
+        <div>
+            <div>                
+                <h1 >{{ post.title }}</h1>
+                <!-- Post author goes before the | the post's created date goes after -->
+                <p class="post-subtitle">{{ post.author }} | {{ post.created_on }}</p>
+            </div>
+            <div class="d-none d-md-block col-md-6 masthead-image">
+                <img src="{% static 'images/default.jpg' %}" class="scale" alt="placeholder">
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col card mb-4  mt-3 left  top">
+            <div class="card-body">
+                <!-- The post content goes inside the card-text. -->
+                <!-- Use the | safe filter inside the template tags -->
+                <p class="card-text">
+                    {{ post.content | safe }}
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
+{% endblock content %}
