Add sign-in/log-in/log-out functionality via allauth

--- a/prop_for_3d/templates/prop_for_3d/proposal.html
+++ b/prop_for_3d/templates/prop_for_3d/proposal.html
@@ -2,7 +2,11 @@
 
 {% block content %}
 
-{% load static%} 
+{% load static%}
+
+{% url 'account_login' as login_url %}
+{% url 'account_signup' as signup_url %}
+{% url 'account_logout' as logout_url %}
 
 <!--Below is the overwiew of the most recently submitted students ideas-->
 <br>
@@ -20,6 +24,20 @@
 <hr>
 
 {% endfor %}
+
+{% if user.is_authenticated %}
+<li>
+	<a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
+</li>
+{% else %}
+<li class="nav-item">
+	<a class="nav-link {% if request.path == signup_url %}active{% endif %}" aria-current="page"
+		href="{% url 'account_signup' %}">Register</a>
+</li>
+<li class="nav-item">
+	<a class="nav-link {% if request.path == login_url %}active{% endif %}" aria-current="page" href="{% url 'account_login' %}">Login</a>
+</li>
+{% endif %}
 
 </div>
 
