--- a/prop_for_3d/templates/prop_for_3d/proposal.html
+++ b/prop_for_3d/templates/prop_for_3d/proposal.html
@@ -26,6 +26,7 @@
 {% endfor %}
 
 {% if user.is_authenticated %}
+<a href="{% url 'new_prop' %}" target="_blank">Share your idea with us.</a>
 <li>
 	<a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
 </li>
