--- a/static/css/style.css
+++ b/static/css/style.css
@@ -22,6 +22,8 @@ body {
     background-color:#b6dcde;
 }
 
+
+
 /*----------images----------*/
 
 .logo {
@@ -44,8 +46,34 @@ img {
     padding: 10px 30px 30px 20px;
     font-size: 18px;
     font-family: "Roboto", sans-serif;
+    text-align: justify;
     text-justify: inter-word;  
 }
+
+/*----------General----------*/
+
+p {
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.ideas {
+    padding: 20px;
+}
+
+.proposal {
+    padding: 10px;
+    font-size: 18px;
+    font-family: "Roboto", sans-serif;
+    text-align: justify;
+    text-justify: inter-word;
+}
+
+.created_on {
+    font-size: small;
+}
+
+
 
 /*----------Nav bar----------*/
 
@@ -144,8 +172,7 @@ a {
 }
 
 .copyright {
-    background-color: slateblue;
-    text-align: right;
+    background-color: slateblue;    
     color:whitesmoke;
     padding: 5px;
     font-size: 16px;
@@ -156,6 +183,7 @@ a {
 
 .copyright p {
     margin: 0;
+    text-align: right;
 }
 
 #ideas-header {
@@ -170,6 +198,22 @@ a {
 .prop-overview {
     font-family: "Roboto", sans-serif;
     padding-left: 20px;
+}
+
+/*----------Log in/out sign up buttons----------*/
+
+.share-idea {
+    color: white;
+}
+
+.button-position {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+button {
+    margin: 10px;
 }
 
 
