--- a/templates/base.html
+++ b/templates/base.html
@@ -67,7 +67,7 @@
             <div class="col-sm-4 footer-item-marg">
                 <h5 class="uppercase general-sub">About the team</h5>
                 <p class="inline-block">
-                    The group aims to design, optimise and manufacture 3D functional structures and thin coatings using metals additive manufacturing techniques with minimised post processing manufacturing steps. We seek to establish academic and commercial collaborations on surface engineering and additive manufacturing in aerospace, automotive, marine and medical sectors.
+                    We design, optimise and manufacture 3D functional structures and coatings using metals 3D printint techniques with minimised post processing steps. We seek to establish academic and commercial collaborations on surface engineering and additive manufacturing in aerospace, automotive, marine and medical sectors.
                 </p>
             </div>
             <div class="col-sm-4 footer-item-marg">
