Fix the bug: could not create an entry in database from app: modified submit_new_prop view

--- a/prop_for_3d/templates/prop_for_3d/new_prop.html
+++ b/prop_for_3d/templates/prop_for_3d/new_prop.html
@@ -21,7 +21,7 @@
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
                     {{ new_prop | crispy }}
                     {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg"><a href="{% url 'submit_new_prop' %}">Submit</a></button>
+                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg"><!--<a href="{% url 'submit_new_prop' %}">Submit</a>-->submit</button>
                     <!--POST method will be wired-up here.-->
                 </form>
                 
