--- a/prop_for_3d/templates/prop_for_3d/proposal.html
+++ b/prop_for_3d/templates/prop_for_3d/proposal.html
@@ -36,8 +36,7 @@ On this page you can:<br>
 {% if user.is_authenticated %}
 
 <div class="container-fluid button-position">
-<button class="btn btn-secondary" type="button"><a href="{% url 'new_prop' %}" target="_blank" class="share-idea">Share your idea with us.</a></button>
-<!--<a href="{% url 'new_prop' %}" target="_blank">Share your idea with us.</a> -->
+<button class="btn btn-secondary" type="button"><a href="{% url 'submit_new_prop' %}" target="_blank" class="share-idea">Share your idea with us.</a></button>
 <button class="btn btn-dark"><a class="nav-link {% if request.path == logout_url %}active{% endif %} share-idea" aria-current="page" href="{% url 'account_logout' %}">Logout</a>
 </button>
 </div>
