Add edit html page and view prop_edit

--- a/prop_for_3d/templates/prop_for_3d/edit_prop.html
+++ b/prop_for_3d/templates/prop_for_3d/edit_prop.html
@@ -14,13 +14,12 @@
             <div class="col col-md-6 offset-md-2 card">
 
                 {% if user.is_authenticated %}
-                <h3>Write your idea here:</h3>
-                <p>Posting as: {{ user.username }}</p>
+                <h3>Edit your proposal:</h3>
+                <p>Editins as: {{ user.username }}</p>
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
-                    {{ new_prop | crispy }}
+                    {{ new_prop | crispy }} <!--N.b. Form name proposal or prop_form-->
                     {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg"><!--<a href="{% url 'submit_new_prop' %}">Submit</a>-->submit</button>
-                    <!--POST method will be wired-up here.-->
+                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit edited</button>                    
                 </form>
                 
                 {% else %}
