--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <div class="row no-gutters">
-            <a href="{% url 'index' %}" class="col-md-4 logo" title="HOME"></a>
+            <a href="{% url 'home' %}" class="col-md-4 logo" title="HOME"></a>
             <div class="col-md-8">
                 <div class="row no-gutters">
                     <div class="col heading">
@@ -30,7 +30,7 @@
                         <!--Nav Bar-->
                         <ul id="nav" class="list-inline menucontainer">
                             <li class="col-6 col-sm-3 list-inline-item menuitem" title="HOME">
-                                <a href="{% url 'index' %}"><span class="material-symbols-outlined">
+                                <a href="{% url 'home' %}"><span class="material-symbols-outlined">
                                     home</span>Home</a>                                
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item menuitem" title="OUR TEAM">
@@ -44,7 +44,7 @@
                                     </span>Facility</a>
                             </li>
                             <li class="col-6 col-sm-3 list-inline-item menuitem" title="SUBMIT PROPOSAL">
-                                <a href="{% url 'proposal' %}" target="_blank"><span class="material-symbols-outlined">
+                                <a href="{% url 'proposals' %}" target="_blank"><span class="material-symbols-outlined">
                                     note_stack
                                     </span>For students</a>
                             </li>
