--- a/prop_for_3d/templates/prop_for_3d/edit_prop.html
+++ b/prop_for_3d/templates/prop_for_3d/edit_prop.html
@@ -6,7 +6,7 @@
 
 {% load crispy_forms_tags %}
 
-<!-- Creating New Proposal -->
+<!-- Editing (updating) Proposal -->
 <br>
 <section>    
     <div class="container-flud">
@@ -19,7 +19,7 @@
                 <form id="commentForm" method="post" style="margin-top: 1.3em;">
                     {{ form | crispy }}
                     {% csrf_token %}
-                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Submit</button>                    
+                    <button id="submitButton" type="submit" class="btn btn-signup btn-lg">Update</button>
                 </form>
                 
                 {% else %}
